# xml_loader

./: .gitignore  CMakeLists.txt  README.md  cli_settings.ini
src/shared/: messages.h
src/tree_view_client/: CMakeLists.txt  main.cpp  tcp_smart_client.cpp  tcp_smart_client.h  widget.cpp  widget.h
src/tree_view_client/gui/: net_settings_dialog.cpp  net_settings_dialog.h  widget.cpp  widget.h
src/xml_server/: CMakeLists.txt  app_complete.cpp  app_complete.h  data_server.cpp  data_server.h  main.cpp  tcp_server.cpp  tcp_server.h
xml_files/: 1.1.1.2.xml
